--- a/package.json
+++ b/package.json
@@ -8,13 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.9.1",
+    "@react-navigation/drawer": "^5.9.2",
+    "@react-navigation/material-bottom-tabs": "^5.2.18",
+    "@react-navigation/native": "^5.7.5",
+    "@react-navigation/stack": "^5.9.2",
     "expo": "~38.0.8",
+    "expo-cli": "^3.27.12",
     "expo-status-bar": "^1.0.2",
+    "firebase": "^7.21.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-elements": "^2.3.2",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-paper": "^4.2.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
